plugins {
    id 'io.spring.dependency-management' version '1.0.7.RELEASE'
    id 'io.franzbecker.gradle-lombok' version '3.0.0'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://plugins.gradle.org/m2' }
    maven { url 'https://jitpack.io' }
}

apply plugin: 'idea'
apply plugin: 'maven'
apply plugin: 'maven-publish'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'io.franzbecker.gradle-lombok'
apply plugin: 'war'

dependencyManagement {
    imports {
        mavenBom "com.github.ixtf:bom:${bomVersion}"
    }
}

group 'com.hengyi.japp'
version '1.0'

sourceCompatibility = 11
targetCompatibility = 11

war {
    archiveName 'fundPlan.war'
}
dependencies {
    compile "com.github.ixtf.japp:codec",
            "org.jasig.cas.client:cas-client-core:3.5.1",
            "org.jboss.resteasy:resteasy-servlet-initializer:3.1.4.Final",
            "com.squareup.okhttp3:okhttp:3.14.2",
            "javax:javaee-api",
            "org.hibernate.validator:hibernate-validator"

    testCompile "junit:junit:4.12"
}
